--- a/rag-orchestrator/requirements.txt
+++ b/rag-orchestrator/requirements.txt
@@ -1,5 +1,19 @@
-streamlit==1.29.0
-chromadb==0.4.18
-requests==2.31.0
-pillow==10.1.0
-python-dotenv==1.0.0
+# --- Framework Principal ---
+streamlit
+
+# --- Conexión a Base de Datos Vectorial ---
+chromadb==1.0.12
+
+# --- Modelos de IA (Patrón 3) ---
+sentence-transformers
+transformers==4.36.2
+torch
+torchvision
+torchaudio
+# Para el modelo BLIP, a veces es necesario instalar desde git si hay problemas
+# pip install salesforce-lavis
+
+# --- Utilidades ---
+requests
+Pillow
+python-dotenv
